# itheumcore-elrond-sc-faucet

./: .gitignore  Cargo.toml
meta/: Cargo.toml
meta/src/: main.rs
src/: claims.rs  faucet.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
