[package]
name = "devnetfaucet-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "you",]

[dev-dependencies]

[dependencies.devnetfaucet]
path = ".."

[dependencies.elrond-wasm]
version = "0.38.0"
features = ["esdt-token-payment-legacy-decode",]

[dependencies.elrond-wasm-debug]
version = "0.38.0"
